--- a/webapp/taskspace/src/main/resources/strings/ru/rb/ccdea/dialog/DossierSearchNlsProp_ru_RU.properties
+++ b/webapp/taskspace/src/main/resources/strings/ru/rb/ccdea/dialog/DossierSearchNlsProp_ru_RU.properties
@@ -5,7 +5,7 @@ MSG_DOSSIER_TYPE=\u0422\u0438\u043F \u0434\u043E\u0441\u044C\u0435
 MSG_DOSSIER_TYPE_CONTRACT=\u0411\u0435\u0437 \u043F\u0430\u0441\u043F\u043E\u0440\u0442\u0430 \u0441\u0434\u0435\u043B\u043A\u0438
 MSG_DOSSIER_TYPE_PASSPORT=\u0421 \u043F\u0430\u0441\u043F\u043E\u0440\u0442\u043E\u043C \u0441\u0434\u0435\u043B\u043A\u0438
 MSG_PASSPORT_NUMBER=\u041D\u043E\u043C\u0435\u0440 \u041F\u0421
-MSG_REG_BRANCH_CODE=\u041D\u043E\u043C\u0435\u0440 \u0444\u0438\u043B\u0438\u0430\u043B\u0430
+MSG_REG_BRANCH_CODE=\u0424\u0438\u043B\u0438\u0430\u043B
 MSG_SEARCH=\u041D\u0430\u0439\u0442\u0438
 MSG_TITLE=\u041F\u043E\u0438\u0441\u043A \u0434\u043E\u0441\u044C\u0435
 
